[package]
authors = ["Taptiive <aalexius912@gmail.com>"]
description = "Get an encrypted unique MachineID/HWID/UUID. Inspired by .Net DeviceId."
edition = "2018"
keywords = ["hwid", "machineid", "hardware-id", "machineuid", "uuid"]
license = "MIT OR Apache-2.0"
name = "machineid"
readme = "README.md"
repository = "https://github.com/Taptiive/machineid-rs"
version = "1.2.1"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hex = "0.4.3"
rust-crypto = "0.2.36"
serde = "1.0.136"
serde_json = "1.0.79"
sysinfo = "0.23.5"
uuid = {version = "0.8.2", features = ["v4"]}
whoami = "1.2.1"

[target.'cfg(windows)'.dependencies]
winreg = "0.10.1"
wmi = "0.9.2"
